--- a/static/templates/txexplorer.html
+++ b/static/templates/txexplorer.html
@@ -5,13 +5,13 @@
     <input type="text" ng-model="txid" class="form-control" id="txid">
   </div>
   <button type="submit" class="btn btn-default" ng-click="search(txid)">Search</button>
-</form> 
+</form>
 <loading></loading>
 <hr>
 <div class="row">
     <div class="col-sm-12">
         <h3 class="text-center">Transaction information</h3>
-        <dl class="dl-horizontal"> 
+        <dl class="dl-horizontal">
             <dt>Transaction ID:</dt>
             <dd>{{transaction.data.txid}}</dd>
             <dt>version:</dt>
@@ -43,7 +43,7 @@
                     <dt>#</dt>
                     <dd>{{$index+1}}</dd>
                     <dt>value</dt>
-                    <dd>{{output.value}} BTC</dd>
+                    <dd>{{output.value}} GRS</dd>
                     <dt>n</dt>
                     <dd>{{output.n}}</dd>
                     <dt>locking script</dt>
